--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
   <body>
     <h1>heading</h1>
-    Hello World. I am alive
+    Helo Wrld. I am alive
     <p> Kai: Thunder Bay </p>
   </body>
 </html>
